# alphafold3

./: .gitignore  pyproject.toml  run_alphafold.py
.github/instructions/: code_explanation.instructions.md
.github/prompts/: review-and-refactor.prompt.md
src/alphafold3/: test_parse.py  version.py
src/alphafold3/common/: folding_input.py
src/alphafold3/data/: featurisation.py  msa.py  msa_config.py  msa_features.py  msa_identifiers.py  parsers.py  pipeline.py  structure_stores.py  template_realign.py  templates.py
src/alphafold3/data/tools/: hmmbuild.py  hmmsearch.py
src/alphafold3/model/: confidence_types.py  confidences.py  data3.py  data_constants.py  feat_batch.py  features.py  merging_features.py  mmcif_metadata.py  model.py  model_config.py  msa_pairing.py  params.py  post_processing.py  protein_data_processing.py
src/alphafold3/model/atom_layout/: atom_layout.py
src/alphafold3/model/network/: atom_cross_attention.py  confidence_head.py  diffusion_head.py  diffusion_transformer.py  distogram_head.py  evoformer.py  featurization.py  modules.py  noise_level_embeddings.py  template_modules.py
src/alphafold3/model/pipeline/: inter_chain_bonds.py  pipeline.py  structure_cleaning.py
src/alphafold3/structure/: bioassemblies.py  bonds.py  chemical_components.py  mmcif.py  parsing.py  sterics.py  structure.py  structure_tables.py  table.py  test_utils.py
